--- a/frontend/cart.html
+++ b/frontend/cart.html
@@ -49,6 +49,7 @@
                         <span id="cart-total">R0.00</span>
                     </div>
                     <button class="checkout-btn" id="checkout-btn">Proceed to Checkout</button>
+                    <button class="whatsapp-order-btn" onclick="orderCartViaWhatsApp()">Order via WhatsApp</button>
                     <a href="shop.html" class="continue-shopping">Continue Shopping</a>
                 </div>
             </div>
