--- a/frontend/admin/index.html
+++ b/frontend/admin/index.html
@@ -11,6 +11,7 @@
     <!-- Admin Navigation -->
     <nav class="admin-nav">
         <div class="admin-nav-container">
+            <button class="mobile-menu-toggle" onclick="toggleMobileSidebar()" style="display: none;">☰</button>
             <div class="admin-logo">
                 <h2>R Colly(RC) Admin</h2>
             </div>
